# garmin-connect-mcp

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
docs/superpowers/plans/: 2026-04-23-wellness-training-tools.md
src/garmin_mcp/: auth.py  cache.py  garmin.py  server.py
tests/: test_auth.py  test_cache.py  test_garmin.py  test_server.py
